# FLUNED-repository

./: .gitignore  CITATION.cff  CITATION.ciff  README.md  pyproject.toml  setup.py
FLUNED-solver/: createFields.H  scalarTransportFoam.C
FLUNED-solver/Make/: files
FLUNED-solver/Make/linux64GccDPInt32Opt/: files  scalarTransportFoam.C.dep
fluned/: LICENSE  requirements.txt  setup.py
fluned/fluned/: fluned.py  fluned_bin_utils.py  of_class.py
flunedPost/: requirements.txt  setup.py
flunedPost/flunedPost/: __main__.py  flunedPost.py
fluned_sl/: LICENSE  README.md  requirements.txt  setup.py
fluned_sl/src/fluned_sl/: __main__.py  circuit_node.py  endf.py  pipes_cdgs.py  single_isotope_activation.py
fluned_sl/tests/: test_integration.py
flunedsl_test/: pyvenv.cfg
installation-script/: fluned-repo-install.sh
integration-tests/: clean_tests.sh
spaceclaim-script/: flunedsl_input_creator.py
src/fluned/: fluned.py  setup.py
src/fluned/fluned/: __init__.py  __main__.py  fluned.py  fluned_h5_utils.py
src/flunedPost/: flunedPost.py
src/fluned_sl/: circuit_node.py  circuit_object.py  endf_extract_data.py  fluned_sl.py  fluned_sl_case.py  pipes_cdgs.py  pipes_vtk.py  tdd_functions.py  utils.py
src/ofClass/: ofClass.py
src/water_isotopes/: water_isotopes.py
tests/: clean_tests.sh  eval_results.sh  run_post.sh  run_tests.sh  test_integration.py
tests-integration/: run_post.sh
tests/case_3/01_DECAY_TEST/: 01_DECAY_TEST.cdgs  01_DECAY_TEST_meters.vtk  01_DECAY_TEST_meters_pipes.vtk  01_DECAY_TEST_output_steady_state.csv  case_3-00_LINES-geometry_meters.stl
tests/case_4/: model.pptx
tests/case_4/branches/: branches.cdgs  branches_meters_pipes.vtk  (+1 more)
tests/case_5/: model.pptx
tests/cases/: input
(+323 files in other folders)
