[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FLUNED-repository"
version = "1.0"
description = "tools to simulate irradiated water in fusion installations"
authors = [
  { name = "Marco De Pietri", email = "mdepietri@ind.uned.es" }
]
# Python requirement
requires-python = ">=3.11, <3.12"

# Project dependencies (install_requires)
dependencies = [
  "h5py",
  "numpy>=1.21,<2",
  "vtk",
  "pyvista",
  "iapws",
  "tqdm",
]

[project.optional-dependencies]
test = [
  "pytest>=6.0.0"
]

[project.scripts]
flunedPost = "flunedPost.flunedPost:main"
fluned = "fluned.fluned:main"
fluned_sl = "fluned_sl.fluned_sl:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


